Update server config in flutter-build.yml
Patch server configuration values in config.rs.

--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -92,6 +92,13 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Patch server config
+        run: |
+          sed -i 's|pub const RENDEZVOUS_SERVERS: &\[&str\] = &\["rs-ny.rustdesk.com"\];|pub const RENDEZVOUS_SERVERS: \&[\&str] = \&["172.168.40.101"];|g' libs/hbb_common/src/config.rs
+          sed -i 's|pub const RS_PUB_KEY: &str = "OeVuKk5nlHiXp+APNn0Y3pC1Iwpwn44JGqrQCsWqmBw=";|pub const RS_PUB_KEY: \&str = "u1VuoEWKlCgUo4BNDpOahqwceiM2xkPmE6c3xNHJoNI=";|g' libs/hbb_common/src/config.rs
+          sed -i 's|RwLock::new("RustDesk".to_owned())|RwLock::new("AysSoft Remote".to_owned())|g' libs/hbb_common/src/config.rs
+          cat libs/hbb_common/src/config.rs | grep -E "RENDEZVOUS_SERVERS|RS_PUB_KEY|AysSoft" | head -5
+
       - name: Restore bridge files
         uses: actions/download-artifact@master
         with:
