--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -93,11 +93,14 @@ jobs:
           submodules: recursive
 
       - name: Patch server config
+        shell: pwsh
         run: |
-          sed -i 's|pub const RENDEZVOUS_SERVERS: &\[&str\] = &\["rs-ny.rustdesk.com"\];|pub const RENDEZVOUS_SERVERS: \&[\&str] = \&["172.168.40.101"];|g' libs/hbb_common/src/config.rs
-          sed -i 's|pub const RS_PUB_KEY: &str = "OeVuKk5nlHiXp+APNn0Y3pC1Iwpwn44JGqrQCsWqmBw=";|pub const RS_PUB_KEY: \&str = "u1VuoEWKlCgUo4BNDpOahqwceiM2xkPmE6c3xNHJoNI=";|g' libs/hbb_common/src/config.rs
-          sed -i 's|RwLock::new("RustDesk".to_owned())|RwLock::new("AysSoft Remote".to_owned())|g' libs/hbb_common/src/config.rs
-          cat libs/hbb_common/src/config.rs | grep -E "RENDEZVOUS_SERVERS|RS_PUB_KEY|AysSoft" | head -5
+          $configFile = "libs/hbb_common/src/config.rs"
+          $content = Get-Content $configFile -Raw
+          $content = $content -replace 'pub const RENDEZVOUS_SERVERS: &\[&str\] = &\["rs-ny.rustdesk.com"\];', 'pub const RENDEZVOUS_SERVERS: &[&str] = &["172.168.40.101"];'
+          $content = $content -replace 'pub const RS_PUB_KEY: &str = "OeVuKk5nlHiXp\+APNn0Y3pC1Iwpwn44JGqrQCsWqmBw=";', 'pub const RS_PUB_KEY: &str = "u1VuoEWKlCgUo4BNDpOahqwceiM2xkPmE6c3xNHJoNI=";'
+          $content = $content -replace 'RwLock::new\("RustDesk"\.to_owned\(\)\)', 'RwLock::new("AysSoft Remote".to_owned())'
+          Set-Content $configFile $content
 
       - name: Restore bridge files
         uses: actions/download-artifact@master
