chore(Cargo): enable optimization level for release builds
- Set the optimization level to 'z' in Cargo.toml to reduce the binary size.
- This change enhances the performance of the release builds by optimizing the code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -229,5 +229,5 @@ lto = true
 codegen-units = 1
 panic = 'abort'
 strip = true
-#opt-level = 'z' # only have smaller size after strip
+opt-level = 'z'
 rpath = true
